--- a/Textformat.css
+++ b/Textformat.css
@@ -15,8 +15,27 @@
 .imgIPbot {
 	
 	float:right;
-	height: 250px;
-	width: 250px;
+	height: 225px;
+	width: 225px;
 	padding-left: 5px;
 	border-radius: 20px;
+}
+
+.ImgHomeTop {
+	float:left;
+	height:225px;
+	width:225px;
+	padding-top: 5px;
+	margin-right: 5px;
+	border-radius: 20px;
+}
+
+.ImgHpBot {
+	float:right;
+	height:250px;
+	width:250px;
+	margin-left:5px;
+	border-radius:20px;
+	
+
 }
